<resources>
    <string name="app_name">NTHU Chat</string>
    <string name="play_services_not_installed">Google Play services is not installed on this device.</string>
    <string name="school">Public</string>
    <string name="welcome_msg">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="invite_menu_label">Invite</string>
    <string name="invitation_message">Please join me for a friendly chat</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">Friendly Chat Invite</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="fresh_config">Fresh Config</string>
    <string name="cause_crash">Cause Crash</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3589269405021012/6743491039</string>
    <string name="prompt_id">Your iLMS ID</string>
    <string name="prompt_password">Your iLMS Password</string>
    <string name="error_invalid_email">This account is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="introduction">NTHU Chat is an UNOFFICAL app, and is NOT AFFILIATED with, ENDORSED or SUPPORT by NTHU \nIf you like this app, feel free to contribute on Github, or donate to make this app better</string>
    <string name="change_name">Change Name</string>
    <string name="change_name_intro"> (max 20 characters):</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="channels">Channels</string>
    <string name="map">Map</string>
    <string name="courses">Courses</string>
    <string name="div">Department</string>
    <string name="emptymessage">You can be the first one to talk!</string>
    <string name="facebook">Facebook</string>
    <string name="discover">Discover</string>

    <!-- Basic Map Demo -->
    <string name="basic_demo_label">Basic Map</string>
    <string name="basic_demo_details">Launches a map with marker pointing at Sydney.</string>

    <!-- Camera Demo -->
    <string name="animate">Animate</string>
    <string name="camera_demo_description">Demonstrates Camera Functions</string>
    <string name="camera_demo_label">Camera</string>
    <string name="down_arrow">\u2193</string>
    <string name="duration">Custom Duration</string>
    <string name="go_to_bondi">Go to Bondi</string>
    <string name="go_to_sydney">Go to Sydney</string>
    <string name="left_arrow">\u2190</string>
    <string name="right_arrow">\u2192</string>
    <string name="stop_animation">\u25A0</string>
    <string name="tilt_less">\u2193</string>
    <string name="tilt_more">\u2191</string>
    <string name="up_arrow">\u2191</string>
    <string name="zoom_in">+</string>
    <string name="zoom_out">-</string>

    <!-- Circle Demo -->
    <string name="circle_demo_label">Circle Demo</string>
    <string name="circle_demo_details">Demonstrate how to add circles to a map</string>
    <string name="properties_circle">Properties for Circle(s)</string>

    <!-- Close Info Window On Retap Demo -->
    <string name="close_info_window_demo_label">Close Info Window Demo</string>
    <string name="close_info_window_demo_details">Demonstrates how to close the info window when the currently selected marker is retapped.</string>

    <!-- Layers Demo -->
    <string name="buildings">Buildings</string>
    <string name="hybrid">Hybrid</string>
    <string name="indoor">Indoor</string>
    <!--<string-array name="layers_array">-->
    <!--<item>@string/normal</item>-->
    <!--<item>@string/hybrid</item>-->
    <!--<item>@string/satellite</item>-->
    <!--<item>@string/terrain</item>-->
    <!--<item>@string/none_map</item>-->
    <!--</string-array>-->
    <string name="layers_demo_label">Layers</string>
    <string name="layers_demo_description">Demonstrates the different map layers.</string>
    <string name="my_location">My Location</string>
    <string name="none_map">None</string>
    <string name="normal">Normal</string>
    <string name="ok">OK</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="traffic">Traffic</string>

    <!-- Lite List Demo -->
    <string name="lite_list_demo_label">Lite List Demo</string>
    <string name="lite_list_demo_details">Show a list of Lite Map of different locations using RecyclerView with LinearLayoutManager and GridLayoutManager</string>
    <string name="linear">Linear</string>
    <string name="grid">Grid</string>

    <!-- Markers Demo -->
    <string name="custom_info_contents">Custom Info Contents</string>
    <string name="custom_info_window">Custom Info Window</string>
    <string name="default_info_window">Default Info Window</string>
    <string name="drag_melbourne">Drag Melbourne</string>
    <string name="clear_map">Clear</string>
    <string name="flat">Flat</string>
    <string name="reset_map">Reset</string>
    <string name="map_not_ready">Map is not ready</string>
    <string name="markers_demo_description">Demonstrates how to add Markers to a map.</string>
    <string name="markers_demo_label">Markers</string>
    <string name="on_marker_drag">onMarkerDrag.  Current Position: (%1$f, %2$f)</string>
    <string name="on_marker_drag_start">Started dragging marker</string>
    <string name="on_marker_drag_end">Marker stopped dragging</string>
    <string name="rotation">Rotation</string>
    <string name="state_badge_label">State badge</string>

    <!-- Permissions -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <!-- Polygon Demo -->
    <string name="clickable">Clickable</string>
    <string name="fill_alpha">Fill Alpha</string>
    <string name="fill_hue">Fill Hue</string>
    <string name="joint_type_bevel">Bevel</string>
    <string name="joint_type_default">Default</string>
    <string name="joint_type_round">Round</string>
    <string name="pattern_dashed">Dashed</string>
    <string name="pattern_dotted">Dotted</string>
    <string name="pattern_mixed">Mixed</string>
    <string name="pattern_solid">Solid</string>
    <string name="polygon_demo_description">Demonstrates how to add Polygons to a map.</string>
    <string name="polygon_demo_details">Demonstrates how to add Polygons to a map</string>
    <string name="polygon_demo_label">Polygons</string>
    <string name="properties_australia_polygon">Properties for Polygon over Australia</string>
    <string name="stroke_alpha">Stroke Alpha</string>
    <string name="stroke_hue">Stroke Hue</string>
    <string name="stroke_joint_type">Stroke Joint Type</string>
    <string name="stroke_pattern">Stroke Pattern</string>
    <string name="stroke_width">Stroke Width</string>

    <!-- Polylines Demo -->
    <string name="alpha">Alpha</string>
    <string name="cap_butt">Butt</string>
    <string name="cap_image">Image</string>
    <string name="cap_round">Round</string>
    <string name="cap_square">Square</string>
    <string name="end_cap">End Cap</string>
    <string name="hue">Hue</string>
    <string name="joint_type">Joint Type</string>
    <string name="pattern">Pattern</string>
    <string name="polyline_demo_description">Demonstrates how to add Polylines to a map</string>
    <string name="polyline_demo_label">Polyline</string>
    <string name="start_cap">Start Cap</string>
    <string name="width">Width</string>

    <!-- StreetView Panorama Navigation Demo -->
    <string name="street_view_panorama_navigation_demo_label">Street View Panorama Navigation Demo</string>
    <string name="street_view_panorama_navigation_demo_details">Street View Panorama with programmatic navigation</string>
    <string name="request_position">Position</string>
    <string name="walk_panorama">Walk</string>
    <string name="go_to_invalid">Go to Invalid Point</string>
    <string name="go_to_san_francisco">Go to San Francisco</string>
    <string name="go_to_santorini">Go to Santorini</string>

    <!-- Tags Demo -->
    <string name="tags_demo_label">Tags</string>
    <string name="tags_demo_details">Demonstrates how to get and set tags on API objects.</string>
    <string name="tags_demo_map_description">Map with a circle, ground overlay, marker, polygon and polyline.</string>

    <!-- UI Settings Demo -->
    <string name="ui_settings_demo_label">UI Settings Demo</string>
    <string name="ui_settings_demo_details">Demonstrate how to toggle the UI of a map</string>
    <string name="location">Location permission is required to run the demo</string>
    <string name="checkbox_zoom">Zoom</string>
    <string name="checkbox_compass">Compass</string>
    <string name="checkbox_my_location_layer">My Location</string>
    <string name="checkbox_level_picker">Level Picker</string>
    <string name="checkbox_map_toolbar">Map Toolbar</string>
    <string name="checkbox_zoom_gesture">Zoom Gestures</string>
    <string name="checkbox_scroll_gesture">Scroll Gestures</string>
    <string name="checkbox_tilt_gesture">Tilt Gestures</string>
    <string name="checkbox_rotate_gesture">Rotate Gestures</string>

    <!-- Visible Regions Demo -->
    <string name="camera_change_message">CameraChangeListener: %1$s</string>
    <string name="region_demo_label">Visible Regions</string>
    <string name="region_demo_details">Demonstrates how to use Visible Regions.</string>
    <string name="vr_normal_button">Normal</string>
    <string name="vr_more_padded_button">More</string>
    <string name="vr_opera_house_button">SOH</string>
    <string name="vr_sfo_button">SFO</string>
    <string name="vr_australia_button">AUS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
